Users, Plans & Assets Basic Functionality